--- a/AutentifyAPI/Views/GestionUtilisateurs/EnregistrerUtilisateur.cshtml
+++ b/AutentifyAPI/Views/GestionUtilisateurs/EnregistrerUtilisateur.cshtml
@@ -15,7 +15,7 @@
     <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="Home/Index">Accueil</a></li>
         <li class="breadcrumb-item"><a asp-controller="DonneesGeneraux" asp-action="ConsulterListeUtilisateur">Gestions des utilisateurs</a></li>
-        <li class="breadcrumb-item active" aria-current="page">Ajouter </li>
+        <li class="breadcrumb-item active" aria-current="page">Ajouter # </li>
     </ol>
 </nav>
 
