--- a/AutentifyAPI/Views/Shared/_Layout.cshtml
+++ b/AutentifyAPI/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
                     <div class="profile clearfix">
                         <hr>
                         <div class="profile_pic">
-                            <img src="~/assets/LayUp/images/user.jpg" alt="Utilisateur connecté" srcset="" class="img-circle" width="70" height="70">
+                            <img src="~/assets/LayUp/images/user.jpg" alt="Utilisateur ##connecté" srcset="" class="img-circle" width="70" height="70">
                         </div>
                         <div class="profile_info">
                             <span>Bienvenu,</span>
